tests/ui/type/ascription/issue-47666.stderr
error: path separator must be a double colon
  --> $DIR/issue-47666.rs:3:19
   |
LL |     let _ = Option:Some(vec![0, 1]);
   |                   ^ help: use a double colon instead: `::`
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: aborting due to previous error

